# NewLiuXin

./: README.md  build.gradle  gradle.properties  libs.versions.toml  liuxinapp.jks  settings.gradle
audioplayer_lib/src/main/cpp/: CMakeLists.txt
audioplayer_lib/src/main/cpp/ffmpeg/: FFmpegDecodeProxy.cpp  FFmpegDecodeProxy.h  FFmpegDemuxingProxy.cpp  FFmpegDemuxingProxy.h  FFmpegErrorProxy.h
audioplayer_lib/src/main/cpp/include/libavcodec/: avcodec.h  bsf.h  codec.h  codec_id.h  packet.h
audioplayer_lib/src/main/cpp/include/libavformat/: avformat.h  avio.h
audioplayer_lib/src/main/cpp/include/libavutil/: avstring.h  frame.h  mem.h  opt.h  pixfmt.h  timecode.h
audioplayer_lib/src/main/cpp/player/: AudioPlayerController.cpp  AudioPlayerController.h  AudioPlayerJni.cpp
audioplayer_lib/src/main/cpp/player/decode/: AudioDecoder.cpp  AudioDecoder.h
audioplayer_lib/src/main/cpp/player/play/: AudioPlayer.cpp  AudioPlayer.h
audioplayer_lib/src/main/cpp/utils/: TimeUtils.h
module_camera/src/main/cpp/: CMakeLists.txt  VideoRecordController.cpp  VideoRecordController.h  VideoRecordJni.cpp
module_camera/src/main/cpp/camera/: CameraRenderer.cpp  CameraRenderer.h  ImageSampler.cpp  ImageSampler.h  TriangleSampler.cpp  TriangleSampler.h
module_camera/src/main/cpp/core/: CameraProxy.h  CoordinateSystems.cpp  CoordinateSystems.h  EBOProxy.cpp  EBOProxy.h  ErrorProxy.cpp  ErrorProxy.h  ProgramProxy.cpp  ProgramProxy.h  ShaderProxy.cpp  TextureProxy.cpp  TextureProxy.h  VAOProxy.h  VBOProxy.h
module_camera/src/main/cpp/egl/: EGLCore.cpp  EGLCore.h  EGLErrorProxy.h  EGLShareContext.cpp  EGLShareContext.h  EGLThread.cpp  EGLThread.h
module_camera/src/main/cpp/entity/: NativeImage.h
module_camera/src/main/cpp/filter/: FiltersSampler.cpp  FiltersSampler.h
module_camera/src/main/cpp/filter/adjust/: BrightnessSampler.cpp  BrightnessSampler.h  ContrastSampler.cpp  ContrastSampler.h  ExposureSampler.cpp  ExposureSampler.h  SaturationSampler.cpp  SaturationSampler.h  SharpenSampler.cpp  SharpenSampler.h
module_camera/src/main/cpp/filter/base/: AdjustSampler.cpp  AdjustSampler.h  BaseFilterSampler.cpp  BaseFilterSampler.h  BaseSampler.h  BlendSampler.cpp  BlendSampler.h
module_camera/src/main/cpp/filter/blend/: AntiqueSampler.cpp  AntiqueSampler.h  BlackCatSampler.cpp  BlackCatSampler.h  CalmSampler.cpp  CalmSampler.h  CoolSampler.cpp  CoolSampler.h  CrayonSampler.cpp  CrayonSampler.h  EmeraldSampler.cpp  EmeraldSampler.h  EvergreenSampler.cpp  EvergreenSampler.h  FairyTaleSampler.cpp  FairyTaleSampler.h  HealthySampler.cpp  HealthySampler.h  LatteSampler.cpp  LatteSampler.h  NostalgiaSampler.cpp  NostalgiaSampler.h  OriginalSampler.cpp  OriginalSampler.h  RomanceSampler.cpp  RomanceSampler.h  SakuraSampler.cpp  SakuraSampler.h  SketchSampler.cpp  SketchSampler.h  SkinWhitenSampler.cpp  SkinWhitenSampler.h  SunriseSampler.cpp  SunriseSampler.h  SunsetSampler.cpp  SunsetSampler.h  SweetsSampler.cpp  SweetsSampler.h  TenderSampler.cpp  TenderSampler.h  (+4 more)
module_camera/src/main/cpp/include/glm/: fwd.hpp  matrix.hpp
module_camera/src/main/cpp/include/glm/ext/: matrix_double2x2.hpp  matrix_double2x4_precision.hpp  matrix_double3x2_precision.hpp  matrix_double3x3_precision.hpp  matrix_double3x4_precision.hpp  matrix_double4x2_precision.hpp  matrix_double4x3.hpp  matrix_double4x3_precision.hpp  matrix_float2x2.hpp  matrix_float2x2_precision.hpp  (+30 more)
module_camera/src/main/cpp/jni/: CameraJni.cpp
module_camera/src/main/cpp/utils/: BitmapUtils.cpp  BitmapUtils.h  Logutils.h  YUVCodecUtils.h
module_camera/src/main/cpp/video/: VideoController.cpp  VideoController.h  VideoDisplay.cpp  VideoDisplay.h
module_camera/src/main/cpp/video/render/: OffscreenCompoundRender.cpp  OffscreenCompoundRender.h  VideoFinalEffectRender.cpp  VideoFinalEffectRender.h  VideoRender.cpp  VideoRender.h
(+1206 files in other folders)
